--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main, build]
+    branches: [main]
   pull_request:
-    branches: [main, build]
+    branches: [main]
 
 jobs:
   build-and-deploy:
